--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,9 @@
     "backbone.marionette": "~1.8.4",
     "nvd3": "~1.1.15-beta",
     "requirejs": "~2.1.11",
-    "react": "~0.10.0"
+    "react": "~0.10.0",
+    "bacon.model": "~0.1.6",
+    "bacon": "~0.7.10",
+    "director": "~1.2.2"
   }
 }
