--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-recess": "~0.6.1"
   },
   "dependencies": {
-    "express": "~4.1.1"
+    "express": "~4.1.1",
+    "mime": "~1.2.11"
   }
 }
